# roomeditor

./: .gitignore  CLAUDE.md
client/: package-lock.json  (+2 more)
server/: pyproject.toml
server/app/: config.py  main.py  models.py  schemas.py
server/app/routes/: anysplat.py  benchmarks.py  collab.py  editing.py  jobs.py  objects.py  postprocess.py  projects.py  segments.py  ws.py
server/app/services/: reconstruction.py
server/pipeline/: auto_cleanup.py  benchmark.py  classify_segments.py  compress_splat.py  evaluate.py  evaluate_noreference.py  extract_frames.py  extract_mesh.py  generate_object.py  geometric_quality.py  inpaint_scene.py  losses.py  pruning.py  rasterizer.py  relight.py  run_anysplat.py  run_anysplat_subprocess.py  run_colmap.py  run_mast3r.py  run_spfsplat_subprocess.py  scene_manager.py  segment_objects.py  segment_scene.py  select_keyframes.py  streaming.py  train_gaussians.py  undo.py
server/scripts/: compare_methods.py  download_benchmarks.py  eval_kitchen.py  run_benchmark.py  run_benchmark_validation.py  run_feedforward_comparison.py  run_indoor_benchmarks.py  run_instantsplat.py  run_instantsplat_kitchen.py  run_kitchen_30k.py  setup_anysplat.py  setup_instantsplat.sh  test_refine_pipeline.py
server/tests/: diagnose_appearance.py  render_previews.py  run_kitchen.py  test_click_segment_3d.py  test_editing_api.py  test_evaluate.py  test_extract_mesh.py  test_integration.py  test_losses.py  test_pruning.py  test_rasterizer.py  test_scene_manager.py  test_schemas.py  test_trainer.py
server/utils/: gpu.py  splat_io.py  spz_convert.py
(+63 files in other folders)
