[project]
name = "roomeditor-server"
version = "0.1.0"
description = "3D room reconstruction and editing server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    "numpy>=1.26.0",
    "plyfile>=1.0.0",
    "scipy>=1.10.0",
    "spz @ git+https://github.com/nianticlabs/spz.git",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "gsplat>=1.0.0",
    "lpips>=0.1.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline", "utils"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
